[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Cenario/solo.png" type="Texture" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Cenario/objetos.png" type="Texture" id=3]
[ext_resource path="res://level/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://enemy/Inimigo.tscn" type="PackedScene" id=5]
[ext_resource path="res://level/Main.gd" type="Script" id=6]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]
1/name = "solo.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 96, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "solo.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 336, 96, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "solo.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 192, 96, 96 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "solo.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 288, 336, 96, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 48, 272, 48, 256, 48, 224, 96, 208, 112, 208, 96, 192, 64, 192, 64, 160, 80, 176, 144, 192, 176, 176, 208, 176, 240, 176, 208, 192, 176, 208, 240, 224, 240, 256, 224, 272, 208, 304, 144, 304, 96, 304 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 48, 96, 48, 96, 64, 80, 96, 48, 96, 16, 96, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 144, 96, 128, 176, 144, 176, 192, 128, 224, 112, 240, 80, 240, 64, 224, 16, 192 )

[sub_resource type="TileSet" id=5]
0/name = "objetos.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 640, 288, 304 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "objetos.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 288, 0, 96, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "objetos.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 304, 192, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="solo" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -196588, 1, 0, -196587, 1, 0, -196586, 1, 0, -196585, 1, 0, -65540, 1, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 1, 0, -131070, 1, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -131061, 2, 0, -131060, 2, 0, -131059, 2, 0, -131058, 2, 0, -131057, 2, 0, -131056, 2, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 4, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -4, 1, 0, -3, 2, 0, -2, 1, 0, -1, 1, 0, -65536, 2, 0, -65535, 4, 0, -65534, 1, 0, -65533, 2, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 2, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, 65532, 1, 0, 65533, 2, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 1, 0, 2, 1, 0, 3, 2, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 2, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 131068, 1, 0, 131069, 2, 0, 131070, 1, 0, 131071, 1, 0, 65536, 2, 0, 65537, 1, 0, 65538, 1, 0, 65539, 2, 0, 65540, 1, 0, 65541, 4, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 2, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 3, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 196604, 1, 0, 196605, 2, 0, 196606, 4, 0, 196607, 1, 0, 131072, 2, 0, 131073, 1, 0, 131074, 1, 0, 131075, 2, 0, 131076, 1, 0, 131077, 1, 0, 131078, 3, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 4, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 2, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 262140, 1, 0, 262141, 2, 0, 262142, 1, 0, 262143, 1, 0, 196608, 2, 0, 196609, 1, 0, 196610, 1, 0, 196611, 2, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 2, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 327676, 1, 0, 327677, 2, 0, 327678, 1, 0, 327679, 1, 0, 262144, 2, 0, 262145, 1, 0, 262146, 1, 0, 262147, 2, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 2, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 393212, 1, 0, 393213, 2, 0, 393214, 1, 0, 393215, 1, 0, 327680, 2, 0, 327681, 3, 0, 327682, 1, 0, 327683, 2, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 1, 0, 327703, 1, 0, 458748, 1, 0, 458749, 2, 0, 458750, 1, 0, 458751, 1, 0, 393216, 2, 0, 393217, 1, 0, 393218, 1, 0, 393219, 2, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 2, 0, 393238, 1, 0, 393239, 1, 0, 524284, 1, 0, 524285, 2, 0, 524286, 1, 0, 524287, 1, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 4, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 2, 0, 458774, 1, 0, 458775, 1, 0, 589820, 1, 0, 589821, 2, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 2, 0, 524310, 1, 0, 524311, 1, 0, 655356, 1, 0, 655357, 2, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 1, 0, 589847, 1, 0, 720892, 1, 0, 720893, 2, 0, 720894, 1, 0, 720895, 1, 0, 655360, 4, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 2, 0, 655369, 4, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 786428, 1, 0, 786429, 2, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 3, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 2, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 4, 0, 720919, 1, 0, 851964, 1, 0, 851965, 2, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 2, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 3, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 917500, 1, 0, 917501, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 4, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 983036, 1, 0, 983037, 1, 0, 983038, 1, 0, 983039, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 508.981, 252.112 )

[node name="Inimigo" parent="." instance=ExtResource( 5 )]

[node name="objetos" type="TileMap" parent="."]
position = Vector2( 38.0547, 28.541 )
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( -196607, 1, 0, -196605, 1, 0, -65538, 1, 0, -3, 1, 0, -65527, 2, 0, 13, 1, 0, 27, 0, 0, 65537, 0, 0, 196620, 1, 0, 262156, 1, 0, 327691, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 0, 0, 458758, 1, 0, 589828, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 983036, 0, 0, 917513, 1, 0, 983049, 1, 0, 983061, 0, 0, 1114121, 1, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="TimerIninigos" type="Timer" parent="."]
autostart = true

[node name="TimerTesouros" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimerReinicio" type="Timer" parent="."]
wait_time = 3.0
[connection signal="cria_bomba" from="Player" to="." method="_on_Player_cria_bomba"]
[connection signal="ganhou" from="Player" to="." method="_on_Player_ganhou"]
[connection signal="timeout" from="TimerIninigos" to="." method="_on_TimerIninigos_timeout"]
[connection signal="timeout" from="TimerTesouros" to="." method="_on_TimerTesouros_timeout"]
[connection signal="timeout" from="TimerReinicio" to="." method="_on_TimerReinicio_timeout"]
